<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PeliculasPDM</string>
    <string name="mensajebienvenida">Welcome!</string>
    <string name="asistente">Do you want the voice assistance?</string>
    <string name="descripcion">This is an app where you could get a random movie giving a few information</string>
    <string name="si">yes</string>
    <string name="no">no</string>
    <string name="inicionoasistente">Let\'s start, what era would you like to see the movie from?</string>
    <string name="peliantigua">I want a classic (20s-50s years)</string>
    <string name="pelimasmoderna">A coloured classic (60s-80s years)</string>
    <string name="pelimoderna">Something actual(90s-)</string>
    <string name="textogenero">Then choose a genre</string>
    <string name="seleccionpelis">These are some related movies</string>
    <string name="descripcioncartas">Swipe right if you liked it, or left if you don\'t know or don\'t like it</string>
    <string name="credenciales">Enter your TheMovieDB credentials to login</string>
    <string name="nombreusuario">Name</string>
    <string name="iniciosesionboton">Log in</string>
    <string name="titulocarrusel">Our recommendation for you</string>
    <string name="valorarpeli">More information</string>
    <string name="otrasopciones">Also you can...</string>
    <string name="epoca">Year</string>

    <string name="generos">Géneros</string>
    <string name="drama">Drama</string>
    <string name="comedia">Comedy</string>
    <string name="thriller">Thriller</string>
    <string name="accion">Action</string>
    <string name="siguiente">Continue</string>
    <string name="documental">Documental</string>
    <string name="terror">Horror</string>
    <string name="western">Western</string>
    <string name="scifi">Science Fiction</string>
    <string name="musical">Musical</string>

    <string name="puntuacionminima">Minimum rating</string>
    <string name="popularidad">¿Do you want a popular film?</string>
    <string name="ocultar">Press to hide</string>
    <string name="elijaparametros">Choose your recommendation options from the following parameters</string>
    <string name="buscar">Search</string>
    <string name="desde">From</string>
    <string name="hasta">To</string>
    <string name="volverinicio">Return to start</string>
    <string name="obtenerpelicula">Get other film</string>
    <string name="asistentevoz">Voice assistant</string>
    <string name="hablar">Press to talk</string>
    <string name="anadirfavoritos">Add to favourites</string>
    <string name="mispeliculas">My films</string>
    <string name="agite">Shake to get others</string>
    <string name="selecciondecada">Select decades</string>
    <string name="seleccioninf">Select last number from bottom limit</string>
    <string name="seleccionsup">Select last number from top limit</string>

    <string name="listadeseguimiento">In watchlist</string>
    <string name="megusta">Like</string>
    <string name="nomegusta">Dislike</string>
    <string name="anadirwatchlist">Add to watchlist</string>
    <string name="nomasmostrar">Nothing to show</string>

    <string name="bienvenida">Welcome to the voice assistant.</string>
    <string name="elijedrama">You have chosen drama, is that correct?</string>
    <string name="elijecomedia">You have chosen comedy, is that correct?</string>
    <string name="elijeaccion">You have chosen action, is that correct?</string>
    <string name="elijethriller">You have chosen thriller, is that correct?</string>
    <string name="elijescifi">You have chosen science fiction, is that correct?</string>
    <string name="elijedocumental">You have chosen documentary, is that correct?</string>
    <string name="elijeterror">You have chosen terror, is that correct?</string>
    <string name="elijewestern">You have chosen western, is that correct?</string>
    <string name="elijemusical">You have chosen musical, is that correct?</string>
    <string name="noentendi">I did not understand, please repeat the selected option again</string>

    <string name="preguntaanio">"Now say the year you want the movie for"</string>
    <string name="preguntagenero">"Tell me one of the following genres"</string>
    <string name="preguntapopularidad">"Lastly, do you want a well-known movie?"</string>
    <string name="aniovalido">"Please state a valid year"</string>

    <string name="popularsi">"You have chosen a popular movie, is that correct?"</string>
    <string name="popularno">"You have chosen an unknown movie, is that correct?"</string>
    <string name="siono">"Please answer yes or no"</string>
</resources>