<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObtenerRecomendacion">

    <Button
        android:id="@+id/button9"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="verPeliculasRelacionadas"
        android:text="@string/siguiente"
        android:textSize="12sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/opciones"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="49dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:onClick="volverAtras"
        app:icon="@drawable/abc_vector_test"
        app:iconPadding="0dp"
        app:iconTint="#00796B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/epoca"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/epocas"
        android:layout_width="319dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/peliantigua" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/pelimasmoderna" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/pelimoderna" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/generos"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epocas" />

    <RadioGroup
        android:id="@+id/generos"
        android:layout_width="322dp"
        android:layout_height="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.333">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/accion" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/comedia" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/drama" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/thriller" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/documental" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/terror" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/western" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>