<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObtenerRecomendacion2">

    <RadioGroup
        android:id="@+id/grouppopularidad"
        android:layout_width="146dp"
        android:layout_height="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
            android:id="@+id/comercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/independiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="118dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/elijaparametros"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mostrargeneros"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:onClick="botonParametroPulsado"
        android:text="@string/generos"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/mostrarepocas"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:onClick="botonParametroPulsado"
        android:text="@string/epoca"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrargeneros" />

    <Button
        android:id="@+id/mostrarpuntuacionminima"
        android:layout_width="331dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:onClick="botonParametroPulsado"
        android:text="@string/puntuacionminima"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrarepocas" />

    <Button
        android:id="@+id/button12"
        android:layout_width="55dp"
        android:layout_height="69dp"
        android:layout_marginTop="12dp"
        android:onClick="verPeliculasRelacionadas"
        app:backgroundTint="@color/teal_700"
        app:icon="@drawable/icono_lupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grouppopularidad" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="321dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/popularidad"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrarpuntuacionminima" />
</androidx.constraintlayout.widget.ConstraintLayout>