<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="397dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/mensajebienvenida"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="386dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/asistente"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="siAsistente"
        android:text="@string/si"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="noAsistente"
        android:text="@string/no"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>