<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button11"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:onClick="botonParametroPulsado"
        android:text="@string/ocultar"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/grouppopularidad"
        android:layout_width="226dp"
        android:layout_height="128dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11">

        <RadioButton
            android:id="@+id/comercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/independiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>