<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListadoPeliculas">

    <Button
        android:id="@+id/listamegustaboton"
        android:layout_width="240dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:onClick="cambioDeLista"
        android:text="@string/megusta"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaseguimientoboton" />

    <Button
        android:id="@+id/listaseguimientoboton"
        android:layout_width="240dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:onClick="cambioDeLista"
        android:text="@string/listadeseguimiento"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="359dp"
        android:layout_height="450dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listanomegustaboton"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/scrollpeliculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center|top"
        android:text="@string/mispeliculas"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listanomegustaboton"
        android:layout_width="238dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:onClick="cambioDeLista"
        android:text="@string/nomegusta"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listamegustaboton" />
</androidx.constraintlayout.widget.ConstraintLayout>