<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeliculasRelacionadas">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="335dp"
        android:layout_height="74dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/seleccionpelis"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="327dp"
        android:layout_height="71dp"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/descripcioncartas"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.huxq17.swipecardsview.SwipeCardsView
        android:id="@+id/SwipeCardsView"
        android:layout_width="318dp"
        android:layout_height="414dp"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button16"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:onClick="volverInicio"
        android:text="@string/volverinicio"
        android:textSize="12sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>