<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="66dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/hasta"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button13"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:onClick="botonParametroPulsado"
        android:text="@string/ocultar"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/pickerDesde"
        android:layout_width="92dp"
        android:layout_height="121dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

    </NumberPicker>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="66dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/desde"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <NumberPicker
        android:id="@+id/pickerHasta"
        android:layout_width="91dp"
        android:layout_height="121dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

    </NumberPicker>
</androidx.constraintlayout.widget.ConstraintLayout>