<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="367dp"
        android:layout_height="100dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:text="@string/credenciales"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/catamaran_medium"
        android:inputType="textPersonName"
        android:text="@string/nombreusuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/catamaran_medium"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:text="Contraseña" />

    <Button
        android:id="@+id/button6"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/catamaran_medium"
        android:onClick="inicioSesion"
        android:text="@string/iniciosesionboton"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/mensajeError"
        android:layout_width="363dp"
        android:layout_height="178dp"
        android:layout_marginTop="24dp"
        android:gravity="center|top"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:layout_editor_absoluteX="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>